# bookstore_python_django_backend

./: README.md  clean_files.py  pyproject.toml  signals.py
articles/: admin.py  models.py
articles/api/: filters.py  repositories.py  serializers.py  services.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_initial.py  0003_article_is_active.py
books/: admin.py  models.py
books/api/: filters.py  pagination.py  repositories.py  serializers.py  services.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_initial.py  0003_book_is_active.py  0003_book_privacy.py
bookstore/: asgi.py  settings.py  urls.py  wsgi.py
comments/: admin.py  models.py
comments/api/: repositories.py  serializers.py  services.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_initial.py  0003_comment_is_active.py
documentals/: admin.py  apps.py  models.py
documentals/api/: filters.py  repositories.py  serializers.py  services.py  urls.py  views.py
documentals/migrations/: 0001_initial.py  0002_initial.py
users/: admin.py  models.py
users/api/: filters.py  repositories.py  serializers.py  services.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py
videos/: admin.py  models.py
videos/api/: filters.py  repositories.py  serializers.py  services.py  urls.py  views.py
videos/migrations/: 0001_initial.py
