[tool.poetry]
name = "user-books"
version = "0.1.0"
description = ""
authors = ["jesustr20 <jesus.tr61@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.1"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
drf-yasg = "^1.21.7"
django-extensions = "^3.2.3"
bpython = "^0.24"
ptpython = "^3.0.29"
django-redis = "^5.4.0"
django-filter = "^24.3"
django-environ = "^0.11.2"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
